AC_INIT([texpack], [0.5])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(texpack, 0.5)

AC_LANG_C
AC_LANG_CPLUSPLUS
AC_PROG_CC
AC_PROG_CXX
AM_PROG_LIBTOOL

AC_CHECK_LIB(IL, ilLoadImage, HAVE_DEVIL="yes")
AC_CHECK_LIB(ILU, iluFlipImage, HAVE_DEVILU="yes")
if test \( "x$HAVE_DEVIL" = "x" \) -o \( x$HAVE_DEVILU = "x" \); then
	AC_MSG_ERROR([To build texpack DevIL library is needed (http://openil.sourceforge.net/)])
fi

AC_SUBST([CONFIG_SRC])

dnl version of library
TEXPACK_VERSION_INFO="1"
AC_SUBST(TEXPACK_VERSION_INFO)

AC_ARG_ENABLE(regenerate-man,
	AC_HELP_STRING([--enable-regenerate-man],
		[regenerate man pages from xml]),
	man_regen=yes,
	man_regen=no)
dnl Check for xsltproc
AC_PATH_PROG([XSLTPROC], [xsltproc])
if test "x$XSLTPROC" != "x"; then
	JH_CHECK_XML_CATALOG([-//OASIS//DTD DocBook XML V4.1.2//EN],
						[DocBook XML DTD V4.1.2], [], man_regen=no)
	JH_CHECK_XML_CATALOG([http://docbook.sourceforge.net/release/xsl/current/manpages/docbook.xsl],
						[DocBook XSL Stylesheets], [], man_regen=no)
	AC_SUBST(XSLTPROC)
else
    man_regen=no
fi
AM_CONDITIONAL(REGENERATE_MAN, test x$man_regen != xno)

AC_ARG_ENABLE(nls,
	AC_HELP_STRING([--disable-nls],
		[do not install non English man pages]),
	USE_NLS=${enableval},
	USE_NLS=yes)
AM_CONDITIONAL(USE_NLS, test x$USE_NLS = xyes)

AC_OUTPUT([Makefile src/Makefile docs/Makefile docs/man/Makefile docs/man/ru/Makefile])
